Fixed actions of showing/hiding search bar and collapsing nav

--- a/client/src/pages/SearchResults/SearchResults.css
+++ b/client/src/pages/SearchResults/SearchResults.css
@@ -6,3 +6,7 @@ section#search-results {
   margin-left: auto;
   margin-right: auto;
 }
+
+div.results-row {
+  margin-bottom: 20px;
+}
